[package]
name = "sfshare"
version = "0.1.0"
authors = ["matthiak00 <matthias.kind@fu-berlin.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
crossterm = "0.13.3"
futures = "0.3.0"
ipconfig = "0.2.1"
async-std = { version = "1", features = ["unstable"]}